@@ -17,6 +17,7 @@ int synostodweomer(TBeing *caster, TBeing *v, int level, short bKnown)
 {
   int hitp = 0;
   affectedData aff;
+  int casterlevel = caster->GetMaxLevel();
 
   if (!caster->isImmortal() && caster->checkForSkillAttempt(SPELL_SYNOSTODWEOMER)) {
     act("You are not prepared to try to Snyostodweomer again so soon.",
@@ -37,7 +38,7 @@ int synostodweomer(TBeing *caster, TBeing *v, int level, short bKnown)
     if (!caster->isImmortal()) {
       aff.type = AFFECT_SKILL_ATTEMPT;
       aff.location = APPLY_NONE;
-      aff.duration = max(min(level/12, 5), 1) * Pulse::UPDATES_PER_MUDHOUR;
+      aff.duration = max(min(casterlevel/12, 5), 1) * Pulse::UPDATES_PER_MUDHOUR;
       aff.bitvector = 0;
       aff.modifier = SPELL_SYNOSTODWEOMER;
       caster->affectTo(&aff, -1);
@@ -55,7 +56,7 @@ int synostodweomer(TBeing *caster, TBeing *v, int level, short bKnown)
 
     aff.type = SPELL_SYNOSTODWEOMER;
     aff.level = level;
-    aff.duration  = max(min(level/12, 5), 1) * Pulse::UPDATES_PER_MUDHOUR;
+    aff.duration = max(min(casterlevel/12, 5), 1) * Pulse::UPDATES_PER_MUDHOUR;
     aff.modifier = hitp;
     aff.location = APPLY_HIT;
     aff.bitvector = 0;
