@@ -1,7 +1,4 @@
-****** THIS SKILLS HAS BEEN DISABLED TEMPORARILY *****
-The synostodweomer prayer allows the altruistic deikhan to transfer up to
-half of the deikhan's present health to the target of the prayer. The deikhan
-will lose the hitpoints given to the beneficiary.  The amount of hitpoints
-transferred depends on the level of the recipient, the faction percentage
-of the deikhan and the learning of the deikhan.  The prayer is very hard
-to use and the deikhan can only use it about once every few days. 
+The synostodweomer prayer allows the deikhan to enhance the health of the
+target of the prayer.  The amount of hitpoints granted depends on the
+level and the learning of the deikhan. The spell has a cooldown so that
+the deikhan can only maintain the spell on a single target.
